--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
+    "lucide-react": "0.263.1",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
